--- a/NaproKarta.Client/NaproKarta.Client.csproj
+++ b/NaproKarta.Client/NaproKarta.Client.csproj
@@ -241,22 +241,25 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Repositories\Interfaces\IAppVmRepository.cs" />
+    <Compile Include="Repositories\Interfaces\IObservationVmRepository.cs" />
+    <Compile Include="Repositories\Interfaces\IChartVmRepository.cs" />
+    <Compile Include="Repositories\AppVmRepository.cs" />
+    <Compile Include="Repositories\ObservationVmRepository.cs" />
+    <Compile Include="Repositories\ChartVmRepository.cs" />
     <Compile Include="Resolver\UnityResolver.cs" />
-    <Compile Include="SaveModels\ChartSm.cs" />
-    <Compile Include="Services\NaproClientAppService.cs" />
-    <Compile Include="Services\NaproClientObservationService.cs" />
-    <Compile Include="Services\NaproClientChartService.cs" />
-    <Compile Include="ViewModels\AccountViewModels.cs" />
-    <Compile Include="ViewModels\CycleVm.cs" />
-    <Compile Include="ViewModels\HelpingViewModels\ChartIdAndTitle.cs" />
-    <Compile Include="ViewModels\ChartVm.cs" />
-    <Compile Include="ViewModels\ManageViewModel.cs" />
+    <Compile Include="Models\SaveModels\ChartSm.cs" />
+    <Compile Include="Models\ViewModels\AccountViewModels.cs" />
+    <Compile Include="Models\ViewModels\CycleVm.cs" />
+    <Compile Include="Models\HelpingViewModels\ChartIdAndTitle.cs" />
+    <Compile Include="Models\ViewModels\ChartVm.cs" />
+    <Compile Include="Models\ViewModels\ManageViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
-    <Compile Include="ViewModels\NavBarVm.cs" />
-    <Compile Include="ViewModels\PictureVm.cs" />
-    <Compile Include="ViewModels\ObservationNoteVm.cs" />
-    <Compile Include="ViewModels\ObservationVm.cs" />
+    <Compile Include="Models\ViewModels\NavBarVm.cs" />
+    <Compile Include="Models\ViewModels\PictureVm.cs" />
+    <Compile Include="Models\ViewModels\ObservationNoteVm.cs" />
+    <Compile Include="Models\ViewModels\ObservationVm.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-theme.css" />
@@ -338,6 +341,7 @@
   <ItemGroup>
     <Folder Include="App\" />
     <Folder Include="App_Data\" />
+    <Folder Include="Services\" />
     <Folder Include="Views\my1Default\" />
     <Folder Include="Views\my2Default\" />
   </ItemGroup>
