--- a/NaproKarta.Server/NaproKarta.Server.csproj
+++ b/NaproKarta.Server/NaproKarta.Server.csproj
@@ -176,41 +176,58 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="App_Start\UnityConfig.cs" />
-    <Compile Include="Migrations\201712191037565_init.cs" />
-    <Compile Include="Migrations\201712191037565_init.Designer.cs">
+    <None Include="App_Start\UnityConfig.cssss" />
+    <Compile Include="Context\Migrations\201712191037565_init.cs" />
+    <Compile Include="Context\Migrations\201712191037565_init.Designer.cs">
       <DependentUpon>201712191037565_init.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201801050858257_1.cs" />
-    <Compile Include="Migrations\201801050858257_1.Designer.cs">
+    <Compile Include="Context\Migrations\201801050858257_1.cs" />
+    <Compile Include="Context\Migrations\201801050858257_1.Designer.cs">
       <DependentUpon>201801050858257_1.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201801050924477_2.cs" />
-    <Compile Include="Migrations\201801050924477_2.Designer.cs">
+    <Compile Include="Context\Migrations\201801050924477_2.cs" />
+    <Compile Include="Context\Migrations\201801050924477_2.Designer.cs">
       <DependentUpon>201801050924477_2.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201801120947212_3.cs" />
-    <Compile Include="Migrations\201801120947212_3.Designer.cs">
+    <Compile Include="Context\Migrations\201801120947212_3.cs" />
+    <Compile Include="Context\Migrations\201801120947212_3.Designer.cs">
       <DependentUpon>201801120947212_3.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201801161159420_4.cs" />
-    <Compile Include="Migrations\201801161159420_4.Designer.cs">
+    <Compile Include="Context\Migrations\201801161159420_4.cs" />
+    <Compile Include="Context\Migrations\201801161159420_4.Designer.cs">
       <DependentUpon>201801161159420_4.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201801191313102_5.cs" />
-    <Compile Include="Migrations\201801191313102_5.Designer.cs">
+    <Compile Include="Context\Migrations\201801191313102_5.cs" />
+    <Compile Include="Context\Migrations\201801191313102_5.Designer.cs">
       <DependentUpon>201801191313102_5.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201801221155526_6.cs" />
-    <Compile Include="Migrations\201801221155526_6.Designer.cs">
+    <Compile Include="Context\Migrations\201801221155526_6.cs" />
+    <Compile Include="Context\Migrations\201801221155526_6.Designer.cs">
       <DependentUpon>201801221155526_6.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Context\Migrations\201801250941492_7.cs" />
+    <Compile Include="Context\Migrations\201801250941492_7.Designer.cs">
+      <DependentUpon>201801250941492_7.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201801251657587_8.cs" />
+    <Compile Include="Migrations\201801251657587_8.Designer.cs">
+      <DependentUpon>201801251657587_8.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201801261428522_9.cs" />
+    <Compile Include="Migrations\201801261428522_9.Designer.cs">
+      <DependentUpon>201801261428522_9.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201801261432442_10.cs" />
+    <Compile Include="Migrations\201801261432442_10.Designer.cs">
+      <DependentUpon>201801261432442_10.cs</DependentUpon>
     </Compile>
     <Compile Include="Models\SubModels\Cipher.cs" />
     <Compile Include="Models\SubModels\CipherCd.cs" />
     <Compile Include="Models\SubModels\Comment.cs" />
     <Compile Include="Models\SubModels\Letter.cs" />
     <Compile Include="Models\SubModels\Marker.cs" />
-    <Compile Include="Interfaces\IApplicationUserRepository.cs" />
+    <Compile Include="Repositories\CycleRepository.cs" />
+    <Compile Include="Repositories\Interfaces\IApplicationUserRepository.cs" />
     <Compile Include="Models\SubModels\NumTime.cs" />
     <Compile Include="Models\SubModels\Picture.cs" />
     <Compile Include="Models\SubModels\ObservationNote.cs" />
@@ -218,11 +235,11 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Interfaces\IChartRepository.cs" />
-    <Compile Include="Interfaces\ICycleRepository.cs" />
-    <Compile Include="Interfaces\IObservationRepository.cs" />
-    <Compile Include="Interfaces\IUserDataRepository.cs" />
-    <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="Repositories\Interfaces\IChartRepository.cs" />
+    <Compile Include="Repositories\Interfaces\ICycleRepository.cs" />
+    <Compile Include="Repositories\Interfaces\IObservationRepository.cs" />
+    <Compile Include="Repositories\Interfaces\IUserDataRepository.cs" />
+    <Compile Include="Context\Migrations\Configuration.cs" />
     <Compile Include="Context\NaproKartaDbContext.cs" />
     <Compile Include="Models\Observation.cs" />
     <Compile Include="Models\UserData.cs" />
@@ -243,9 +260,6 @@
   <ItemGroup>
     <None Include="packages.config" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
-    <Content Include="Scripts\modernizr-2.6.2.js" />
-    <Content Include="Scripts\respond.js" />
-    <Content Include="Scripts\respond.min.js" />
     <Content Include="web.config" />
     <None Include="web.Debug.config">
       <DependentUpon>web.config</DependentUpon>
@@ -255,26 +269,38 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201712191037565_init.resx">
+    <EmbeddedResource Include="Context\Migrations\201712191037565_init.resx">
       <DependentUpon>201712191037565_init.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201801050858257_1.resx">
+    <EmbeddedResource Include="Context\Migrations\201801050858257_1.resx">
       <DependentUpon>201801050858257_1.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201801050924477_2.resx">
+    <EmbeddedResource Include="Context\Migrations\201801050924477_2.resx">
       <DependentUpon>201801050924477_2.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201801120947212_3.resx">
+    <EmbeddedResource Include="Context\Migrations\201801120947212_3.resx">
       <DependentUpon>201801120947212_3.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201801161159420_4.resx">
+    <EmbeddedResource Include="Context\Migrations\201801161159420_4.resx">
       <DependentUpon>201801161159420_4.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201801191313102_5.resx">
+    <EmbeddedResource Include="Context\Migrations\201801191313102_5.resx">
       <DependentUpon>201801191313102_5.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201801221155526_6.resx">
+    <EmbeddedResource Include="Context\Migrations\201801221155526_6.resx">
       <DependentUpon>201801221155526_6.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Context\Migrations\201801250941492_7.resx">
+      <DependentUpon>201801250941492_7.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201801251657587_8.resx">
+      <DependentUpon>201801251657587_8.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201801261428522_9.resx">
+      <DependentUpon>201801261428522_9.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201801261432442_10.resx">
+      <DependentUpon>201801261432442_10.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
