--- a/NaproKarta.Client/Web.config
+++ b/NaproKarta.Client/Web.config
@@ -17,7 +17,7 @@
     -->
 
     <!--LAPEK-->
-     <add name="DefaultConnection" connectionString="Data Source=KUBAMISZCZLENOV\SQLEXPRESS;Initial Catalog=NaproKartaDBv2;Integrated Security=True;User ID=naprokarta;Password=naprokarta;Trusted_Connection=false; " providerName="System.Data.SqlClient"/> 
+     <!--<add name="DefaultConnection" connectionString="Data Source=KUBAMISZCZLENOV\SQLEXPRESS;Initial Catalog=NaproKartaDBv2;Integrated Security=True;User ID=naprokarta;Password=naprokarta;Trusted_Connection=false; " providerName="System.Data.SqlClient"/>--> 
 
     <!--FABRITY-->
     <!--<add name="DefaultConnection" connectionString="Data Source=.;Initial Catalog=NaproKartaDBv2;Integrated Security=True;User ID=naprokarta;Password=naprokarta;Trusted_Connection=false; " providerName="System.Data.SqlClient" />-->
@@ -26,7 +26,7 @@
     <!--<add name="DefaultConnection" connectionString="Data Source=KUBAMISZCZSTAC\TEW_SQLEXPRESS;Initial Catalog=NaproKartaDBv2;Integrated Security=True;User ID=naprokarta;Password=naprokarta;Trusted_Connection=false;" providerName="System.Data.SqlClient" />-->
 
 
-    <!--<add name="DefaultConnection" connectionString="
+    <add name="DefaultConnection" connectionString="
          Data Source=mssql3.webio.pl,2401;
          Initial Catalog=kubamiszcz_NaproKartaDBv2;
          Integrated Security=False;
@@ -36,7 +36,7 @@
          Encrypt=False;         
          ApplicationIntent=ReadWrite;
          MultiSubnetFailover=False"
-         providerName="System.Data.SqlClient" />-->
+         providerName="System.Data.SqlClient" />
 
     <!--TrustServerCertificate=True;-->
 
@@ -68,9 +68,9 @@
 
     <httpProtocol>
       <customHeaders>
-        <!--<add name="Access-Control-Allow-Origin" value="*" />-->
-        <add name="Access-Control-Allow-Origin" value="http://localhost:4200"/>
-        <!--<add name="Access-Control-Allow-Origin" value="http://www.naproangular.hostingasp.pl" />-->
+        <add name="Access-Control-Allow-Origin" value="*" />
+        <!--<add name="Access-Control-Allow-Origin" value="http://localhost:4200"/>-->
+        <!--<add name="Access-Control-Allow-Origin" value="http://www.naprokarta.hostingasp.pl"/>-->
         <add name="Access-Control-Allow-Headers" value="X-AspNet-Version,X-Powered-By,Date,Server,Accept,Accept-Encoding,Accept-Language,Cache-Control,Connection,Content-Length,Content-Type,Host,Origin,Pragma,Referer,User-Agent"/>
         <add name="Access-Control-Allow-Methods" value="GET, PUT, POST, DELETE, OPTIONS"/>
         <add name="Access-Control-Max-Age" value="1000"/>
