--- a/NaproKarta.Server/Web.config
+++ b/NaproKarta.Server/Web.config
@@ -23,7 +23,7 @@
          Initial Catalog=kubamiszcz_NaproKartaDBv2;
          Integrated Security=False;
          User ID=kubamiszcz_kubamiszcz;
-         Password=Bur3k123$;
+         Password=B..3....$;
          Trusted_Connection=false;
          Encrypt=False;         
          ApplicationIntent=ReadWrite;
